# nongli

./: CHANGELOG-en.md  CHANGELOG-zh.md  CHANGELOG.md  LICENSE  README-en.md  README-zh.md
.github/ISSUE_TEMPLATE/: bug-report-zh.md  bug-report.md  feature-request-zh.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
data/: coefs.ipynb  coefs.py  dati.py  environment.yml  hanzi.py  spider.py  split.py
fit/: .gitignore  CMakeLists.txt  data.cpp  data.hpp  dati.hpp  macros.hpp  math.hpp  nongli.hpp  prestd.hpp  suite.hpp  test.cpp
fit/test/: CMakeLists.txt  dati.cpp  ganzhi.cpp  lunar.cpp  math.cpp  solar.cpp  suite.hpp  test.cpp  test.hpp
